--- a/source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_amp/agents/skrl_hexo_cfg.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_amp/agents/skrl_hexo_cfg.yaml
@@ -86,7 +86,7 @@ agent:
   value_loss_scale: 2.5
   discriminator_loss_scale: 5.0
   amp_batch_size: 512
-  task_reward_weight: 0
+  task_reward_weight: 0.0
   style_reward_weight: 1.0
   discriminator_batch_size: 4096
   discriminator_reward_scale: 2.0
@@ -97,7 +97,7 @@ agent:
   time_limit_bootstrap: False
   # logging and checkpoint
   experiment:
-    directory: "g1_amp_dance"
+    directory: "hexo"
     experiment_name: ""
     write_interval: auto
     checkpoint_interval: auto
