--- a/source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_amp/agents/skrl_mippo_cfg.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_amp/agents/skrl_mippo_cfg.yaml
@@ -4,29 +4,55 @@ seed: 42
 # Models are instantiated using skrl's model instantiator utility
 # https://skrl.readthedocs.io/en/latest/api/utils/model_instantiators.html
 models:
-  separate: False
-  policy:  # see gaussian_model parameters
-    class: GaussianMixin
-    clip_actions: False
-    clip_log_std: True
-    min_log_std: -20.0
-    max_log_std: 2.0
-    initial_log_std: 0.0
-    network:
-      - name: net
-        input: STATES
-        layers: [32, 32]
-        activations: elu
-    output: ACTIONS
-  value:  # see deterministic_model parameters
-    class: DeterministicMixin
-    clip_actions: False
-    network:
-      - name: net
-        input: STATES
-        layers: [32, 32]
-        activations: elu
-    output: ONE
+  multi_policy: True
+  separate: True
+  exo:
+    policy:
+      class: GaussianMixin
+      clip_actions: False
+      clip_log_std: True
+      min_log_std: -20.0
+      max_log_std: 2.0
+      initial_log_std: 0.0
+      network:
+        - name: net
+          input: STATES
+          layers: [32, 32]
+          activations: elu
+      output: ACTIONS
+    value:
+      class: DeterministicMixin
+      clip_actions: False
+      network:
+        - name: net
+          input: STATES
+          layers: [32, 32]
+          activations: elu
+      output: ONE
+
+  humanoid:
+    policy:
+      class: GaussianMixin
+      clip_actions: True
+      clip_log_std: True
+      min_log_std: -10.0
+      max_log_std: 1.0
+      initial_log_std: -1.0
+      network:
+        - name: net
+          input: STATES
+          layers: [64, 64]
+          activations: relu
+      output: ACTIONS
+    value:
+      class: DeterministicMixin
+      clip_actions: False
+      network:
+        - name: net
+          input: STATES
+          layers: [64, 64]
+          activations: relu
+      output: ONE
 
 
 # Rollout memory
